--- a/todos/templates/todos/home.html
+++ b/todos/templates/todos/home.html
@@ -62,7 +62,9 @@
         <!-- Container para a imagem -->
         <div class="image-container">
             <!-- Adicione o caminho correto para a sua imagem -->
-            <img src="/media/imagemBiblioteca.jpg" alt="Imagem de Livros">
+            <img src="todos\images\ImagemBiblioteca.jpg" alt=" ">
+            <img src="\venv\images\imagemBiblioteca.jpg" alt=" ">
+            <img src="\static\images\imagemBiblioteca.jpg" alt=" ">
         </div>
 
         <p>Você será redirecionado automaticamente em breve...</p>
