--- a/todos/templates/todos/home.html
+++ b/todos/templates/todos/home.html
@@ -62,9 +62,9 @@
         <!-- Container para a imagem -->
         <div class="image-container">
             <!-- Adicione o caminho correto para a sua imagem -->
-            <img src="todos\images\ImagemBiblioteca.jpg" alt=" ">
-            <img src="/images/imagemBiblioteca.jpg" alt=" ">
-            <img src="/imagemBiblioteca.jpg" alt=" ">
+            <img src="/todos/images/ImagemBiblioteca.jpg" alt=" ">
+            <img src="/img/imagemBiblioteca.jpg" alt=" ">
+            <img src="/media/imagemBiblioteca.jpg" alt=" ">
         </div>
         <p>Você será redirecionado automaticamente em breve...</p>
     </div>
