--- a/todos/templates/todos/home.html
+++ b/todos/templates/todos/home.html
@@ -66,8 +66,8 @@
             <!-- <img src="\\img\\imagemBiblioteca.jpg" alt=" "> -->
             <!-- <img src="static/media/imagemBiblioteca.jpg" alt=" "> -->
             {% load static %}
-            <img src="{{ MEDIA_URL }}ImagemBiblioteca.jpg" alt="Livros">
-            <img src="/media/ImagemBiblioteca.jpg" alt="Livros">
+            <img src="{{ MEDIA_URL }}ImagemBiblioteca.jpg" alt=" ">
+            <img src="/media/ImagemBiblioteca.jpg" alt=" ">
         </div>
         <p>Você será redirecionado automaticamente em breve...</p>
     </div>
