--- a/todos/templates/todos/home.html
+++ b/todos/templates/todos/home.html
@@ -61,13 +61,9 @@
 
         <!-- Container para a imagem -->
         <div class="image-container">
-            <!-- Adicione o caminho correto para a sua imagem -->
-            <!-- <img src="/todos/images/ImagemBiblioteca.jpg" alt=" "> -->
-            <!-- <img src="\\img\\imagemBiblioteca.jpg" alt=" "> -->
-            <!-- <img src="static/media/imagemBiblioteca.jpg" alt=" "> -->
-            {% load static %}
-            <img src="{{ MEDIA_URL }}ImagemBiblioteca.jpg" alt=" ">
-            <img src="/media/ImagemBiblioteca.jpg" alt=" ">
+             {% load static %}
+            <img src="{{ MEDIA_URL }}/media/ImagemBiblioteca.jpg" alt=" ">
+          <!--   <img src="/media/ImagemBiblioteca.jpg" alt=" "> -->
         </div>
         <p>Você será redirecionado automaticamente em breve...</p>
     </div>
